# python_template

./: justfile  pyproject.toml
python_template/: main.py  main_test.py
